<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/data" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/browser" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/service" />

        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Sensor" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Camera" />

        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Audio" />
    </group>
</menu>